[gd_scene load_steps=49 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Player/New_Sprite.png" type="Texture" id=2]
[ext_resource path="res://Effects/Teste luz.png" type="Texture" id=3]
[ext_resource path="res://componentes de jogo/NodeTransicao.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sounds/StepFX.wav" type="AudioStream" id=5]
[ext_resource path="res://Player/Boto.png" type="Texture" id=6]
[ext_resource path="res://Sounds/somdearbusto.wav" type="AudioStream" id=7]
[ext_resource path="res://Player/Mula.png" type="Texture" id=8]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.00001
height = 4.0

[sub_resource type="Animation" id=33]
resource_name = "Boto_Baixo"
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("boto:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 6, 7 ]
}

[sub_resource type="Animation" id=34]
resource_name = "Boto_Direita"
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("boto:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 3 ]
}

[sub_resource type="Animation" id=6]
resource_name = "CorrerBaixo"
length = 0.45
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=4]
resource_name = "CorrerCima"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=2]
resource_name = "CorrerDireita"
length = 0.45
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=5]
resource_name = "CorrerEsquerda"
length = 0.45
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=40]
resource_name = "EncontraBoto"

[sub_resource type="Animation" id=7]
resource_name = "Idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=29]
resource_name = "Mula_Cima"
length = 0.8
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Mula:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 2 ]
}

[sub_resource type="Animation" id=30]
resource_name = "Mula_Direita"
length = 0.8
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Mula:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 6 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=35]
resource_name = "boto_esquerda"
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("boto:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 5 ]
}

[sub_resource type="Animation" id=8]
resource_name = "idlebaixo"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 18 ]
}

[sub_resource type="Animation" id=9]
resource_name = "idlecima"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=10]
resource_name = "idleesquerda"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}

[sub_resource type="Animation" id=31]
resource_name = "mula_Esquerda"
length = 0.8
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Mula:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 6 ]
}

[sub_resource type="Animation" id=32]
resource_name = "mula_baixo"
length = 0.8
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Mula:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15, 14 ]
}

[sub_resource type="Animation" id=36]
resource_name = "mula_idle_baixo"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Mula:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}

[sub_resource type="Animation" id=37]
resource_name = "mula_idle_cima"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Mula:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=38]
resource_name = "mula_idle_direita"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Mula:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="Animation" id=39]
resource_name = "mula_idle_esquerda"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Mula:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "CorrerBaixo"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "CorrerDireita"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "CorrerCima"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "CorrerEsquerda"

[sub_resource type="AnimationNodeBlendSpace2D" id=22]
blend_point_0/node = SubResource( 18 )
blend_point_0/pos = Vector2( 0, 1.1 )
blend_point_1/node = SubResource( 19 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 20 )
blend_point_2/pos = Vector2( 0, -1.1 )
blend_point_3/node = SubResource( 21 )
blend_point_3/pos = Vector2( -1, 0 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "idleesquerda"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "idlebaixo"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "idlecima"

[sub_resource type="AnimationNodeBlendSpace2D" id=15]
blend_point_0/node = SubResource( 11 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 12 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 13 )
blend_point_2/pos = Vector2( 0, 1.1 )
blend_point_3/node = SubResource( 14 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachine" id=16]
states/Correr/node = SubResource( 22 )
states/Correr/position = Vector2( 792, 166 )
states/Idle/node = SubResource( 15 )
states/Idle/position = Vector2( 635, 166 )
transitions = [ "Idle", "Correr", SubResource( 23 ), "Correr", "Idle", SubResource( 24 ) ]
start_node = "Idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=17]

[sub_resource type="CircleShape2D" id=25]
radius = 10.0499

[sub_resource type="OccluderPolygon2D" id=26]
polygon = PoolVector2Array( 1.00559, -19.9947, -3.01675, -15.9958, -5.02792, -12.9966, -5.02792, -5.99841, -4.02234, 1.99948, 0, 2.99922 )

[sub_resource type="DynamicFontData" id=28]
font_path = "res://Fonts/HeartbitXX2Px.ttf"

[sub_resource type="DynamicFont" id=27]
size = 14
outline_color = Color( 0.54902, 0.0784314, 0.0784314, 1 )
font_data = SubResource( 28 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 307, 186 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -10 )
scale = Vector2( 0.182147, 0.148438 )
texture = ExtResource( 2 )
hframes = 16
frame = 1

[node name="boto" type="Sprite" parent="."]
visible = false
position = Vector2( 1, -15 )
scale = Vector2( 0.141026, 0.168103 )
texture = ExtResource( 6 )
hframes = 8
frame = 6

[node name="Mula" type="Sprite" parent="."]
visible = false
position = Vector2( -1, -14 )
scale = Vector2( 0.111328, 0.121212 )
texture = ExtResource( 8 )
hframes = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 2 )
rotation = -1.5708
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Boto_Baixo = SubResource( 33 )
anims/Boto_Direita = SubResource( 34 )
anims/CorrerBaixo = SubResource( 6 )
anims/CorrerCima = SubResource( 4 )
anims/CorrerDireita = SubResource( 2 )
anims/CorrerEsquerda = SubResource( 5 )
anims/EncontraBoto = SubResource( 40 )
anims/Idle = SubResource( 7 )
anims/Mula_Cima = SubResource( 29 )
anims/Mula_Direita = SubResource( 30 )
anims/RESET = SubResource( 3 )
anims/boto_esquerda = SubResource( 35 )
anims/idlebaixo = SubResource( 8 )
anims/idlecima = SubResource( 9 )
anims/idleesquerda = SubResource( 10 )
anims/mula_Esquerda = SubResource( 31 )
anims/mula_baixo = SubResource( 32 )
anims/mula_idle_baixo = SubResource( 36 )
anims/mula_idle_cima = SubResource( 37 )
anims/mula_idle_direita = SubResource( 38 )
anims/mula_idle_esquerda = SubResource( 39 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 16 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 17 )
parameters/Correr/blend_position = Vector2( 0, 0 )
parameters/Idle/blend_position = Vector2( -0.0031696, 1.1 )

[node name="interactioncomponenets" type="Node2D" parent="."]
position = Vector2( 0, 6 )
z_index = 1

[node name="interacoes" type="Area2D" parent="interactioncomponenets"]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="interactioncomponenets/interacoes"]
position = Vector2( 0, -4 )
shape = SubResource( 25 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -13, 1 )

[node name="Lanterna" type="Light2D" parent="Position2D"]
visible = false
position = Vector2( 14, -3 )
rotation = -6.28319
texture = ExtResource( 3 )
offset = Vector2( -135, -5 )
texture_scale = 0.8
color = Color( 0.72549, 0.541176, 0.184314, 1 )
shadow_enabled = true
shadow_gradient_length = 1.3

[node name="MáscaraLanterna" type="Light2D" parent="Position2D/Lanterna"]
position = Vector2( 0, 3.00002 )
rotation = -6.28319
texture = ExtResource( 3 )
offset = Vector2( -135, -5 )
texture_scale = 0.8
color = Color( 0.72549, 0.541176, 0.184314, 1 )
energy = 1.96
mode = 3
range_item_cull_mask = 2
shadow_enabled = true
shadow_gradient_length = 375.8
shadow_item_cull_mask = 2

[node name="Sim" type="Node2D" parent="."]

[node name="LightOccluder2D" type="LightOccluder2D" parent="Sim"]
visible = false
show_behind_parent = true
position = Vector2( -6, 1 )
occluder = SubResource( 26 )

[node name="Timer" type="Timer" parent="Sim"]
one_shot = true

[node name="StepFX" type="AudioStreamPlayer2D" parent="Sim"]
stream = ExtResource( 5 )
volume_db = -8.202

[node name="NodeTransicao" parent="." instance=ExtResource( 4 )]
visible = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="interact_label" type="Label" parent="."]
margin_left = -60.0
margin_top = -44.0
margin_right = 59.0
margin_bottom = -31.0
custom_fonts/font = SubResource( 27 )
align = 1
autowrap = true

[node name="sons" type="YSort" parent="."]

[node name="arbusto" type="AudioStreamPlayer2D" parent="sons"]
stream = ExtResource( 7 )

[node name="pato" type="AudioStreamPlayer2D" parent="sons"]

[connection signal="area_entered" from="interactioncomponenets/interacoes" to="." method="_on_interacoes_area_entered"]
[connection signal="area_exited" from="interactioncomponenets/interacoes" to="." method="_on_interacoes_area_exited"]
